feedback container icon overlaps fixed
(cherry picked from commit eb9b3efdaf81b931d1a315d3093cb22dc61a134b)

--- a/agentassist-widget-sdk/UI/css/styles.css
+++ b/agentassist-widget-sdk/UI/css/styles.css
@@ -3018,12 +3018,21 @@ border: 1px solid transparent !important;
     left: -15px;
     position: relative;
     /* background: #EAF1FC; */
-    box-shadow: inset 0px 1px 3px rgba(209,218,231,0.25), inset 0px 0px 1px #D1DAE7;
-    padding: 6px 22px 12px 24px;
+    /* box-shadow: inset 0px 1px 3px rgba(209,218,231,0.25), inset 0px 0px 1px #D1DAE7; */
+    padding: 12px 22px 12px 24px;
     display: inline-block;
     margin-top: -11px;
-    border: 1px dashed #EAF1FC;
+    /* border: 1px dashed #EAF1FC; */
     /* background: #f8fafb; */
+}
+.feedback-helpul-container::before{
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 11px;
+    background: #e6f0f7;
+    left: 0;
+    top: 0;
 }
 .feedback-helpul-container .titles-content {
     display: flex;
